--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -11,7 +11,7 @@
     --secondary-color:#0040ff;
 }
 body {
-    background-image: url(../img/landingp.png);
+    background-image: url('/img/landingp.png');
     background-size: cover;
     background-position:top;
     background-repeat: no-repeat;
@@ -64,7 +64,7 @@ form.nyhedsbrev input#email, input#fornavn {
         display: block;
         font-weight: bold;
         min-height: 46px;
-        width: 400px;
+        width: 300px;
         text-align: center;
         font-size: 1.1rem;
     
@@ -223,6 +223,8 @@ header .navbar ul li:hover > ul {
     display: block;
 }
 
+
+
 #menu-bar {
     display: none;
 }
@@ -280,70 +282,17 @@ label[for="menu-bar"]  {
 
     header .navbar ul li a {
         text-decoration: none;
+        padding: 40px 0px;
         display: block;
         color: var(--primary-color);
+        font-size: 1.2rem;
         font-weight: 1000;
-        font-size: 1.7rem;
-        white-space: nowrap;
-        
-      
+        font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
     }
 
-    .logo {
-        position: absolute;
-        width: 180px;
-        height: auto;
-        top: 17%;
-        left: 50%;
-        transform: translate(-50%, -50%); 
-    }
-
-    h1 {
-        font-size: 4rem;
-    }
-    p {
-        color: var(--primary-color);
-        text-align: start;
-        font-size: 1.7rem;
-        margin: 20px 0;
-        font-weight: 500;
-    }
-    .billede2 img {
-        width: 80%;
-        height: auto;
-      
-    }
-
-    .nyhedsbrev {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-    section.nyhedsb {
-        
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    form.nyhedsbrev input#email, input#fornavn {
-        display: block;
-        font-weight: bold;
-        min-height: 55px;
-        width: 546px;
-        text-align: center;
-        font-size: 1.5rem;
-    }
-    label {
-        margin: 10px;
-        display: flex;
-    }
-    input#betingelser {
-        width: 5%;
-        margin-right: 20px;
-    }
 }
+
+
 
 @media (max-width: 809px) {
    
@@ -355,16 +304,17 @@ label[for="menu-bar"]  {
         font-size: 3.7rem;
         margin-top: 170px;
     }
+   
     header {
         padding: 10px 20px 10px 0px;
         display: flex;
         justify-content: end;
         height: 80vh;
-        } 
+    } 
 
        
                 
-        header .navbar {
+     header .navbar {
         display: none;
         flex-direction: column;
         justify-content: center;
@@ -376,7 +326,7 @@ label[for="menu-bar"]  {
         left: 10;
         box-sizing: border-box;
 
-        }
+    }
                 
         label[for="menu-bar"] {
         display: block;
@@ -468,19 +418,38 @@ label[for="menu-bar"]  {
     header .navbar ul li:hover > ul {
         display: none; /* Hover er slået fra i mobilvisning */
     }
-                
-
-    .nyhedsbrev {
-        margin: 10px;
-         }
-                    
+            
     form.nyhedsbrev input#email, input#fornavn {
         display: block;
-        margin-bottom: 0px;
+        font-weight: bold;
+        min-height: 60px;
         width: 400px;
+        text-align: center;
+        font-size: 1.5rem;
     }
-                
-                   
+
+    .nyhedsbrev {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 1.5rem;
+        font-weight: bold;
+        color: var(--primary-color);
+        margin-top: 30px;
+    }
+
+    section.nyhedsb {
+        margin-top: 35px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    label {
+        margin: 20px 0px;
+    }
+
 
     input#betingelser {
         width: 12%;
@@ -488,13 +457,22 @@ label[for="menu-bar"]  {
     }
 
     .nyhedsbrev button {
-        margin-top: 0px;
+        margin-top: 30px;
     }
 
     }
 
     @media (max-width: 610px) {
    
+        form.nyhedsbrev input#email, input#fornavn {
+            display: block;
+            font-weight: bold;
+            min-height: 60px;
+            width: 300px;
+            text-align: center;
+            font-size: 1.5rem;
+        }
+    
       
         .footer {
       
@@ -585,12 +563,13 @@ label[for="menu-bar"]  {
        
 
         section.instagram {
-            display: flex;
+            display: flex
+    ;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             width: 100%;
-            height: 100vh;
+            height: 65vh;
             text-align: center;
         }
         .instagram img {
@@ -602,14 +581,16 @@ label[for="menu-bar"]  {
         
     }
 
-    @media (max-width: 1002px) {
+    @media (max-width: 1002px) and (min-width: 810px) {
 
+       
         header .navbar ul {
             list-style-type: none;
             display: flex;
+            flex-wrap: nowrap;
             flex-direction: row;
             justify-content: space-around;
-            white-space: nowrap;
+           
         }
 
         .nyhedsbrev {
@@ -625,6 +606,99 @@ label[for="menu-bar"]  {
         p {
             color: var(--primary-color);
             text-align: start;
+            font-size: 1.7rem;
             margin: 20px 0px;
         }
+
+        section.nyhedsb {
+            margin-top: 35px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        form.nyhedsbrev input#email, input#fornavn {
+            display: block;
+            font-weight: bold;
+            min-height: 70px;
+            width: 700px;
+            text-align: center;
+            font-size: 1.5rem;
+        }
+
+        label {
+            margin: 20px 42px;
+        }
+
+        .betingelser p {
+            font-size: 1.5rem;
+        }
+
+        header .navbar ul li a {
+            text-decoration: none;
+            padding: 40px 0px;
+            display: block;
+            color: var(--primary-color);
+            font-size: 30px;
+            font-weight: 1000;
+            font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
+        }
+
     }
+
+    @media (min-width: 1003px) {
+    header {
+        position: relative;
+        height: 100vh;
+    }
+
+    .nyhedsbrev {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        font-size: 1.5rem;
+        font-weight: bold;
+        color: var(--primary-color);
+        margin: 30px 0px;
+    }
+
+    section.nyhedsb {
+        margin-top: 35px;
+        margin: 25px 30px;
+    }
+
+    p {
+        font-size: 2rem;
+        font-weight: 500;
+    }
+
+    form.nyhedsbrev input#email, input#fornavn {
+        display: block;
+        font-weight: bold;
+        min-height: 63px;
+        width: 400px;
+        text-align: center;
+        font-size: 1.3rem;
+        margin: 13px 0px;
+    }
+
+    p#undertekst {
+        margin: 20px 0px;
+    }
+
+    header {
+        position: relative;
+        height: 100vh;
+    }
+
+    .logo {
+        position: absolute;
+        width: 300px;
+        height: auto;
+        top: 19%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+}
